--- a/src/style/scss/pages-components/_header.scss
+++ b/src/style/scss/pages-components/_header.scss
@@ -1,5 +1,17 @@
 header {
-    padding: 18px 0;
+    padding: 13px 0;
+    position: fixed;
+    left: 0;
+    right: 0;
+    background-color: #fff;
+    border-bottom: 1px solid transparent;
+    transition: all .2s;
+
+    &.sticky {
+        z-index: 2;
+        box-shadow: 0px 0px 10px rgba(0,0,0, .15);
+        border-bottom-color: #e6e6e6;
+    }
 
     .container {
         display: flex;
@@ -13,9 +25,47 @@ header {
         display: flex;
 
         li {
-            margin-left: 15px;
+            margin-left: 40px;
             text-transform: uppercase;
+
+            a {
+                position: relative;
+                display: block;
+                padding-bottom: 7px;
+
+                &:after {
+                    content: '';
+                    position: absolute;
+                    height: 3px;
+                    width: 0;
+                    background-image: $gradient-primary;
+                    bottom: 0;
+                    left: 0;
+                    transition: all .3s;
+                }
+
+                &:hover {
+                    &:after {
+                        width: 80%;
+                    }
+                }
+            }
+
+            &.active {
+                a {
+                    &:after {
+                        width: 80%;
+                    }
+                }
+            }
         }
+    }
+}
+.logo {
+    transition: all .3s;
+
+    &:hover {
+        opacity: .8;
     }
 }
 
