--- a/src/style/scss/pages-components/_header.scss
+++ b/src/style/scss/pages-components/_header.scss
@@ -1,72 +1,70 @@
 header {
-    padding: 13px 0;
-    position: fixed;
-    left: 0;
-    right: 0;
-    background-color: #fff;
-    border-bottom: 1px solid transparent;
-    transition: all .2s;
+  padding: 13px 0;
+  position: fixed;
+  left: 0;
+  right: 0;
+  background-color: #fff;
+  border-bottom: 1px solid transparent;
+  transition: all 0.2s;
 
-    &.sticky {
-        z-index: 2;
-        box-shadow: 0px 0px 10px rgba(0,0,0, .15);
-        border-bottom-color: #e6e6e6;
-    }
+  &.sticky {
+    z-index: 10;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
+    border-bottom-color: #e6e6e6;
+  }
 
-    .container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 .header-menu {
-    ul {
-        display: flex;
+  ul {
+    display: flex;
 
-        li {
-            margin-left: 40px;
-            text-transform: uppercase;
+    li {
+      margin-left: 40px;
+      text-transform: uppercase;
 
-            a {
-                position: relative;
-                display: block;
-                padding-bottom: 7px;
+      a {
+        position: relative;
+        display: block;
+        padding-bottom: 7px;
 
-                &:after {
-                    content: '';
-                    position: absolute;
-                    height: 3px;
-                    width: 0;
-                    background-image: $gradient-primary;
-                    bottom: 0;
-                    left: 0;
-                    transition: all .3s;
-                }
-
-                &:hover {
-                    &:after {
-                        width: 80%;
-                    }
-                }
-            }
-
-            &.active {
-                a {
-                    &:after {
-                        width: 80%;
-                    }
-                }
-            }
+        &:after {
+          content: "";
+          position: absolute;
+          height: 3px;
+          width: 0;
+          background-image: $gradient-primary;
+          bottom: 0;
+          left: 0;
+          transition: all 0.3s;
         }
+
+        &:hover {
+          &:after {
+            width: 80%;
+          }
+        }
+      }
+
+      &.active {
+        a {
+          &:after {
+            width: 80%;
+          }
+        }
+      }
     }
+  }
 }
 .logo {
-    transition: all .3s;
+  transition: all 0.3s;
 
-    &:hover {
-        opacity: .8;
-    }
+  &:hover {
+    opacity: 0.8;
+  }
 }
-
-
