--- a/src/style/scss/pages-components/_homepage.scss
+++ b/src/style/scss/pages-components/_homepage.scss
@@ -1,9 +1,6 @@
-.banner {
+.home-banner {
     min-height: 840px;
-    background: url("../../../img/world-map.png") no-repeat center 90px;
-    display: flex;
-    align-items: center;
-    padding-top: 90px;
+
 
     .content {
         width: 840px;
