--- a/src/style/scss/pages-components/_header.scss
+++ b/src/style/scss/pages-components/_header.scss
@@ -31,7 +31,6 @@ header {
       a {
         position: relative;
         display: block;
-        padding-bottom: 7px;
 
         &:after {
           content: "";
@@ -41,13 +40,8 @@ header {
           background-image: $gradient-primary;
           bottom: 0;
           left: 0;
-          transition: all 0.3s;
-        }
+          transition: width .3s;
 
-        &:hover {
-          &:after {
-            width: 80%;
-          }
         }
       }
 
