--- a/src/style/scss/utilities/variables/_variables.scss
+++ b/src/style/scss/utilities/variables/_variables.scss
@@ -11,6 +11,7 @@ $font-tertiary: "FuturaPTDemi", serif;
 $color-primary: #2a1552;
 $color-secondary: #805193;
 $gradient-primary: linear-gradient(#291b44, #18142a);
+$gradient-secondary: linear-gradient(to bottom, #18142a, #291b44);
 
 //Descriptive Base Colors
 $color-text: #191919;
