--- a/src/style/scss/pages-components/_header.scss
+++ b/src/style/scss/pages-components/_header.scss
@@ -38,7 +38,7 @@ header {
           height: 3px;
           width: 0;
           background-image: $gradient-primary;
-          bottom: 0;
+          bottom: -2px;
           left: 0;
           transition: width .3s;
 
