--- a/src/style/scss/responsive/_responsive.scss
+++ b/src/style/scss/responsive/_responsive.scss
@@ -1,227 +1,215 @@
 @media (max-width: 1023px) {
-    /*globa;*/
-    h1 {
-        font-size: 48px;
-    }
+  /*globa;*/
+  h1 {
+    font-size: 48px;
+  }
 
-    h2 {
-        font-size: 34px;
-    }
+  h2 {
+    font-size: 34px;
+  }
 
-    h3 {
-        font-size: 20px;
-    }
+  h3 {
+    font-size: 20px;
+  }
 
-    .header-menu {
-        ul {
-            li {
-                margin-left: 20px;
-            }
-        }
+  .header-menu {
+    ul {
+      li {
+        margin-left: 20px;
+      }
     }
+  }
 
-    .banner {
-        background-size: contain;
+  .banner {
+    background-size: contain;
+  }
+  .home-banner {
+    min-height: 650px;
+
+    p {
+      font-size: 14px;
     }
-    .home-banner {
-        min-height: 650px;
+  }
 
-        p {
-            font-size: 14px;
-        }
+  .services {
+    padding: 50px 0;
+  }
+
+  .partners-logos {
+    padding-top: 0;
+
+    img {
+      width: 90px;
     }
+  }
 
-    .services {
-        padding: 50px 0;
-    }
-
-    .partners-logos {
-        padding-top: 0;
+  .contact-social {
+    ul {
+      li {
+        margin: 0 20px;
 
         img {
-            width: 90px;
+          margin-right: 10px;
         }
+      }
     }
-
-    .contact-social {
-        ul {
-            li {
-                margin: 0 20px;
-
-                img {
-                    margin-right: 10px;
-                }
-            }
-        }
-    }
+  }
 }
 
 @media (max-width: 767px) {
+  h1 {
+    font-size: 32px;
+  }
+
+  h2 {
+    font-size: 23px;
+  }
+
+  h3 {
+    font-size: 14px;
+  }
+
+  .btn {
+    &.btn-lg {
+      font-size: 24px;
+      width: 200px;
+      border-radius: 50px;
+    }
+
+    // &.btn-sm {
+    //   /*font-size: 16px;
+    //         font-family: $font-primary;
+    //         padding: 10px;
+    //         width: 130px;
+    //         border-radius: 25px;*/
+    // }
+  }
+
+  .container {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .header-menu {
+    ul {
+      opacity: 0;
+      visibility: hidden;
+      flex-direction: column;
+      position: absolute;
+      width: 100%;
+      left: 0;
+      z-index: 10;
+      text-align: center;
+      background: #fff;
+      box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.15);
+      transition: all 0.5s;
+      top: 100%;
+      padding: 20px 0;
+
+      &.open {
+        visibility: visible;
+        opacity: 1;
+        
+      }
+
+      li {
+        margin-left: 0;
+        margin-bottom: 15px;
+      }
+    }
+  }
+
+  .burger {
+    display: block;
+  }
+
+  .home-banner {
+    min-height: 400px;
 
     h1 {
-        font-size: 32px;
+      margin-bottom: 30px;
+    }
+  }
+
+  .services {
+    padding: 40px 0;
+  }
+
+  .text-with-img {
+    .section-img {
+      position: static;
+      width: 100%;
+      height: 300px;
     }
 
-    h2 {
-        font-size: 23px;
+    .section-text {
+      padding-top: 0;
+      width: 100%;
+
+      .section-text-content {
+        padding: 30px 20px;
+      }
     }
+  }
 
-    h3 {
-        font-size: 14px;
-    }
+  .quality {
+    padding-bottom: 50px;
+  }
 
+  .about-company {
+    padding: 50px 0;
+  }
 
-    .btn {
+  .contact-social {
+    padding: 40px 20px;
+    ul {
+      flex-wrap: wrap;
+      width: 230px;
+      margin: 0 auto;
 
-        &.btn-lg {
-            font-size: 24px;
-            width: 200px;
-            border-radius: 50px;
+      li {
+        width: 100%;
+        margin: 0;
+        padding-bottom: 25px;
+
+        img {
+          margin-right: 20px;
+
+          width: 24px;
         }
+      }
+    }
+  }
 
-        &.btn-sm {
-            /*font-size: 16px;
-            font-family: $font-primary;
-            padding: 10px;
-            width: 130px;
-            border-radius: 25px;*/
+  .contact-form {
+    padding: 40px 0;
+  }
+
+  .form-inputs {
+    flex-wrap: wrap;
+
+    > div {
+      width: 100%;
+
+      &:first-child {
+        padding-bottom: 25px;
+      }
+    }
+  }
+
+  .top-footer {
+    .top-footer-cols {
+      > div {
+        width: 100%;
+        text-align: center;
+
+        &:not(:last-child) {
+          padding-right: 0;
         }
-
-    }
-
-    .container {
-        padding-left: 15px;
-        padding-right: 15px;
-    }
-
-    .header-menu {
-        ul {
-            opacity: 0;
-            visibility: hidden;
-            flex-direction: column;
-            position: absolute;
-            width: 100%;
-            left: 0;
-            z-index: 10;
-            text-align: center;
-            background: #fff;
-            box-shadow: 1px 1px 3px rgba(0,0,0,.15);
-            transition: all .5s;
-            top: 100%;
-            padding: 20px 0;
-
-            &.open {
-                visibility: visible;
-                opacity: 1;
-            }
-
-            li {
-                margin-left: 0;
-                margin-bottom: 15px;
-            }
+        &:last-child {
+          padding-bottom: 40px;
         }
+      }
     }
-
-
-    .burger {
-        display: block;
-    }
-
-
-    .home-banner {
-        min-height: 400px;
-
-        h1 {
-            margin-bottom: 30px;
-        }
-    }
-
-    .services {
-        padding: 40px 0;
-    }
-
-    .text-with-img {
-
-        .section-img {
-            position: static;
-            width: 100%;
-            height: 300px;
-        }
-
-        .section-text {
-            padding-top: 0;
-            width: 100%;
-
-            .section-text-content {
-                padding: 30px 20px;
-            }
-        }
-    }
-
-    .quality {
-        padding-bottom: 50px;
-    }
-
-    .about-company {
-        padding: 50px 0;
-    }
-
-
-
-    .contact-social {
-        padding: 40px 20px;
-        ul {
-            flex-wrap: wrap;
-            width: 230px;
-            margin: 0 auto;
-
-            li {
-                width: 100%;
-                margin: 0;
-                padding-bottom: 25px;
-
-                img {
-                    margin-right: 20px;
-
-                    width: 24px;
-                }
-            }
-        }
-    }
-
-    .contact-form {
-        padding: 40px 0;
-    }
-
-    .form-inputs {
-        flex-wrap: wrap;
-
-        >div {
-            width: 100%;
-
-            &:first-child {
-                padding-bottom: 25px;
-            }
-        }
-    }
-
-
-
-
-    .top-footer {
-        .top-footer-cols {
-
-            >div {
-                width: 100%;
-                text-align: center;
-
-                &:not(:last-child) {
-                    padding-right: 0;
-                }
-                &:last-child {
-                    padding-bottom: 40px;
-                }
-            }
-        }
-    }
+  }
 }
