--- a/src/style/scss/pages-components/_footer.scss
+++ b/src/style/scss/pages-components/_footer.scss
@@ -4,7 +4,7 @@
 
     .top-footer-cols {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         flex-wrap: wrap;
 
         >div:not(:last-child) {
